Update Mini Hexapod descritption

--- a/content/pages/projects.mdx
+++ b/content/pages/projects.mdx
@@ -5,6 +5,6 @@ description: Some of my projects
 
 ## Mini Hexapod
 
-Fun project with three servos and ATmega8 microcontroller.
-<Image src="/projects/hexapod.jpg" alt="Mini Hexapod" />
-<iframe src="https://www.youtube.com/embed/XvUhuf-Tezw" title="IR remote controlled Mini Hexapod 🕷️" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+Fun project with three servos and ATmega8 microcontroller. [YouTube link](https://youtu.be/XvUhuf-Tezw)
+
+<Image src="/projects/hexapod.jpg" width="1280" height="720" alt="Mini Hexapod" />
