Introduce new about page content

--- a/content/pages/about.mdx
+++ b/content/pages/about.mdx
@@ -1,22 +1,48 @@
 ---
 title: About
-description: About the site
+description: Karol K - July 1, 2023.
 ---
 
-Blandit libero volutpat sed cras ornare arcu. Cursus sit amet dictum sit amet. Nunc vel risus commodo viverra maecenas accumsan. Libero id faucibus nisl tincidunt eget nullam non nisi est. Varius quam quisque id diam vel quam. Id donec ultrices tincidunt arcu non.
+Welcome to my platform!
 
-## Consent
+[KrlK.tech](https://krlk.tech/) serves as a space for me to showcase my work and exchange insights with fellow enthusiasts.
+I share here my projects mainly related to electronics and programming.
+I strive to provide detailed explanations, code snippets, YouTube videos, and so on, to share my knowledge with others.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Volutpat sed cras ornare arcu. Nibh ipsum consequat nisl vel pretium lectus quam id leo. A arcu cursus vitae congue. Amet justo donec enim diam. Vel pharetra vel turpis nunc eget lorem. Gravida quis blandit turpis cursus in. Semper auctor neque vitae tempus. Elementum facilisis leo vel fringilla est ullamcorper eget nulla. Imperdiet nulla malesuada pellentesque elit eget.
+Beyond the realm of 🤖 and 🧑‍💻, you may come across posts that delve into my DIY and artful ideas.
+I indulge in unconventional projects that showcase my inventiveness and ✨ _artistic side_ ✨.
+From DIY creations to artistic endeavors, these ventures serve as outlets for my creativity and further fuel my passion for innovation.
 
-Felis donec et odio pellentesque diam volutpat commodo sed.
+At this point, I want to emphasize that this site can evolve and adapt in various unexpected directions.
+The information provided on this page is not set in stone.
+Be aware that this page is my first blog post.
 
-Tortor consequat id porta nibh. Fames ac turpis egestas maecenas pharetra convallis posuere morbi leo. Scelerisque fermentum dui faucibus in. Tortor posuere ac ut consequat semper viverra.
+## Purpose
 
-## Information we collect
+In the year 2023, as I write these words, amidst the rise of addictive short-form video content that has gained immense popularity, running a personal blog may have a highly lower likelihood of achieving a wide reach compared to currently popular social media platforms like TikTok.
+Nevertheless, I choose to maintain this website with the awareness that it may not garner the same level of exposure.
 
-Amet justo donec enim diam. In hendrerit gravida rutrum quisque non. Hac habitasse platea dictumst quisque sagittis purus sit.
+One of the reasons for my commitment is to improve my English language skills and writing abilities, as English is not my native tongue.
+Connecting with a global community of similar enthusiasts is also a benefit.
+I aim to enhance my proficiency in the language while also focusing on delivering valuable content.
 
-## How we use your Information
+## Platform Codebase
 
-Ut sem nulla pharetra diam sit amet nisl suscipit adipiscing. Consectetur adipiscing elit pellentesque habitant. Ut tristique et egestas quis ipsum suspendisse ultrices gravida.
+The source code for this website can be found on [`KarolKonopka/krlk-tech`](https://github.com/KarolKonopka/krlk-tech/) repository.
+The website was built using [Next.js](https://nextjs.org/) framework, utilizing [Next.js Contentlayer Blog Starter](https://vercel.com/new/templates/next.js/nextjs-contentlayer) template with App Router and [Tailwind CSS](https://tailwindcss.com/), deployed on [Vercel](https://vercel.com/) cloud platform.
+
+## About Me
+
+I come from Poland where I live.
+I currently work as an Junior Software Engineer.
+Alongside my work, I am in the final stages of completing my master's degree in Automatics Control and Robotics.
+
+## Contact
+
+For any inquiries or collaboration proposals, please prefer contacting me via email.
+You can reach me at [karolkonopka98@gmail.com](mailto:karolkonopka98@gmail.com).
+
+Additionally, you can find me on [LinkedIn](https://www.linkedin.com/in/karol-konopka/), [GitHub](https://github.com/KarolKonopka/) and [YouTube](https://www.youtube.com/@krlk/) to stay updated with my latest projects and insights.
+
+Thank you for visiting my website, and I hope you find valuable information and inspiration within its pages.
+Stay tuned for updates on exciting projects, insights and more!
